Compile PascalScript with `-dPS_USESSUPPORT` to support multiple units.

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -19,6 +19,7 @@ option(BUILD_RCON "Build Rcon" True)
 
 if(BUILD_SCRIPTCORE)
   add_flag_append(CMAKE_Pascal_FLAGS "-dSCRIPT")
+  add_flag_append(CMAKE_Pascal_FLAGS "-dPS_USESSUPPORT")
 endif()
 
 if(BUILD_RCON)
