--- a/.github/workflows/soldat.yml
+++ b/.github/workflows/soldat.yml
@@ -9,10 +9,12 @@ jobs:
 
       - name: Install dependencies
         run: |
+          sudo apt-get update
           sudo apt-get install cmake git fpc libprotobuf-dev protobuf-compiler libssl-dev libsdl2-dev libopenal-dev libphysfs-dev libfreetype6
 
       - name: Compile soldat
         run: |
+          export BUILD_ID=${GITHUB_SHA::8}
           mkdir build
           cd build
           cmake .. -DCMAKE_INSTALL_PREFIX=./soldat -DCMAKE_BUILD_TYPE=Release
@@ -82,6 +84,7 @@ jobs:
           set PATH=%PATH%;C:\fpc\3.0.4\bin\i386-win32
           set OPENSSL_ROOT_DIR=C:\vcpkg\installed\x64-windows
           set PHYSFSDIR=C:\vcpkg\installed\x64-windows
+          set BUILD_ID=%GITHUB_SHA:~0,8%
           mkdir build
           cd build
           cmake -G "NMake Makefiles" -DCROSS_WINDOWS_64=1 -DCMAKE_BUILD_TYPE=Release -DCMAKE_TOOLCHAIN_FILE="C:\vcpkg\scripts\buildsystems\vcpkg.cmake"  -DSDL2_BUILDING_LIBRARY=1 ..
@@ -107,6 +110,7 @@ jobs:
 
       - name: Compile soldat
         run: |
+          export BUILD_ID=${GITHUB_SHA::8}
           mkdir build
           cd build
           export PKG_CONFIG_PATH=$PKG_CONFIG_PATH:/usr/local/opt/openssl@1.1/lib/pkgconfig
