--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -43,5 +43,5 @@ endif()
 
 install(
   PROGRAMS ${EXECUTABLE_OUTPUT_PATH}/$<TARGET_FILE_NAME:soldatserver>
-  DESTINATION ${CMAKE_INSTALL_PREFIX}
+  DESTINATION ${CMAKE_INSTALL_FULL_BINDIR}
 )
