--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -56,9 +56,10 @@ endif()
 
 install(
   PROGRAMS ${EXECUTABLE_OUTPUT_PATH}/$<TARGET_FILE_NAME:soldat>
-  DESTINATION ${CMAKE_INSTALL_PREFIX}
+  DESTINATION ${CMAKE_INSTALL_FULL_BINDIR}
 )
 install(
   FILES ${EXECUTABLE_OUTPUT_PATH}/play-regular.ttf
-  DESTINATION ${CMAKE_INSTALL_PREFIX}
+  # FIXME: this should be CMAKE_INSTALL_FULL_DATADIR, but soldat can't discover it there
+  DESTINATION ${CMAKE_INSTALL_FULL_BINDIR}
 )
