--- a/.github/workflows/soldat.yml
+++ b/.github/workflows/soldat.yml
@@ -80,7 +80,7 @@ jobs:
 
       - name: Build soldat
         run: |
-          call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x86_amd64
+          call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x64
           set PATH=%PATH%;C:\fpc\3.0.4\bin\i386-win32
           set OPENSSL_ROOT_DIR=C:\vcpkg\installed\x64-windows
           set PHYSFSDIR=C:\vcpkg\installed\x64-windows
