Add FFI fuzz build wiring.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ option(CROSS_DARWIN_64 "Cross compile to macOS x86_64" False)
 option(CROSS_DARWIN_32 "Cross compile to macOS i386" False)
 
 option(ADD_BFT "Copy BFT test to scripts directory" False)
+option(ADD_FFI_FUZZ "Enable ScriptCore FFI fuzz tests" False)
 
 cmake_minimum_required(VERSION 3.14)
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake_modules")
