--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -9,6 +9,7 @@ endif()
 
 add_flag_prepend(CMAKE_Pascal_FLAGS "-Fu${CMAKE_SOURCE_DIR}/server")
 add_flag_prepend(CMAKE_Pascal_FLAGS "-Fu${CMAKE_SOURCE_DIR}/server/scriptcore")
+add_flag_prepend(CMAKE_Pascal_FLAGS "-Fu${CMAKE_SOURCE_DIR}/server/scriptcore/test")
 add_flag_prepend(CMAKE_Pascal_FLAGS
                  "-Fu${CMAKE_SOURCE_DIR}/3rdparty/pascalscript/Source")
 
@@ -20,6 +21,9 @@ option(BUILD_RCON "Build Rcon" True)
 if(BUILD_SCRIPTCORE)
   add_flag_append(CMAKE_Pascal_FLAGS "-dSCRIPT")
   add_flag_append(CMAKE_Pascal_FLAGS "-dPS_USESSUPPORT")
+  if(ADD_FFI_FUZZ)
+    add_flag_append(CMAKE_Pascal_FLAGS "-dSCRIPT_FFI_FUZZ")
+  endif()
 endif()
 
 if(BUILD_RCON)
@@ -38,9 +42,8 @@ if(ADD_ASSETS)
   add_dependencies(soldatserver soldat_smod)
 endif()
 
-if(BUILD_SCRIPTCORE AND ADD_BFT)
+if(BUILD_SCRIPTCORE)
   add_subdirectory(scriptcore/test)
-  add_dependencies(soldatserver bft)
 endif()
 
 if(NOT BUILD_STEAM)
