SC3 test CMake cleanup.

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -9,9 +9,11 @@ endif()
 
 add_flag_prepend(CMAKE_Pascal_FLAGS "-Fu${CMAKE_SOURCE_DIR}/server")
 add_flag_prepend(CMAKE_Pascal_FLAGS "-Fu${CMAKE_SOURCE_DIR}/server/scriptcore")
-add_flag_prepend(CMAKE_Pascal_FLAGS "-Fu${CMAKE_SOURCE_DIR}/server/scriptcore/test")
 add_flag_prepend(CMAKE_Pascal_FLAGS
                  "-Fu${CMAKE_SOURCE_DIR}/3rdparty/pascalscript/Source")
+if(ADD_FFI_FUZZ)
+  add_flag_prepend(CMAKE_Pascal_FLAGS "-Fu${CMAKE_SOURCE_DIR}/server/scriptcore/test")
+endif()
 
 add_flag_append(CMAKE_Pascal_FLAGS "-dSERVER")
 
@@ -43,7 +45,7 @@ if(ADD_ASSETS)
   add_dependencies(soldatserver soldat_smod)
 endif()
 
-if(BUILD_SCRIPTCORE)
+if(BUILD_SCRIPTCORE AND (ADD_BFT OR ADD_FFI_FUZZ))
   add_subdirectory(scriptcore/test)
 endif()
 
