Add script(s) to generate Steam/GNS bindings, update to SteamWorks SDK 1.53a, fix steam builds. Rough-draft-ish, need to test on Windows.

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -50,7 +50,9 @@ if(UNIX)
   target_link_libraries(soldat stb)
 endif()
 
-if(NOT BUILD_STEAM)
+if(BUILD_STEAM)
+  target_link_libraries(soldat steam_api)
+else()
   target_link_libraries(soldat GameNetworkingSockets)
 endif()
 
